# bluelib

./: README.md  lib.py  main.py  pyproject.toml
bluelib/: __init__.py  lib.py
