[tool.poetry]
name = "bluelib"
version = "0.1.0"
description = "A small sync library to test blue."
authors = ["TAG-Epic <tagepicuwu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
